[package]
name = "cryptos"
version = "0.0.1-alpha.6"
edition = "2021"
authors = ["ChisatoNishikigi73 <ChisatoNishikigi73@gmail.com>"]
description = "All cryptographic in one, make crypto easy"
license = "MIT"
repository = "https://github.com/ChisatoNishikigi73/Cryptos"
documentation = "https://github.com/ChisatoNishikigi73/Cryptos/blob/master/README.md"
readme = "README.md"
keywords = ["crypto", "cryptography", "hash", "encryption", "decryption"]
categories = ["cryptography", "development-tools"]
